[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://sprites/face.png" type="Texture" id=2]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.3
bounce = 0.2

[sub_resource type="CircleShape2D" id=2]
radius = 22.7197

[sub_resource type="CircleShape2D" id=3]
radius = 25.5

[node name="player" type="RigidBody2D"]
collision_layer = 0
physics_material_override = SubResource( 1 )
gravity_scale = 4.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="vis" type="Polygon2D" parent="."]
position = Vector2( 0.0879364, -0.151222 )
scale = Vector2( 0.818579, 0.821886 )
polygon = PoolVector2Array( 7.50257, 28.2053, -0.402382, 29.3851, -7.95338, 28.4412, -14.7965, 25.6096, -20.8137, 21.0082, -25.533, 14.991, -28.3647, 8.14793, -29.4265, 0.242989, -28.2467, -7.07204, -25.1791, -14.0331, -21.1676, -19.9323, -14.6785, -25.0057, -7.12749, -28.0732, 0.305527, -29.0171, 7.85652, -28.1912, 15.1715, -25.1236, 21.1887, -20.4043, 25.2002, -14.859, 27.7959, -8.72382, 29.2117, 0.125004, 28.2678, 7.44003, 25.5542, 14.5191, 20.8348, 20.7723, 14.6996, 25.4916 )

[node name="face" type="Sprite" parent="vis"]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="col" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="detector" type="Area2D" parent="col"]
collision_layer = 2
collision_mask = 2

[node name="col" type="CollisionShape2D" parent="col/detector"]
shape = SubResource( 3 )

[node name="camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )

[node name="spawn_gimbal" type="Node2D" parent="."]

[node name="spawn_point" type="Position2D" parent="spawn_gimbal"]
position = Vector2( 8, 0 )

[node name="sfx" type="Node2D" parent="."]

[connection signal="body_entered" from="col/detector" to="." method="_on_detector_body_entered"]
